--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -145,6 +145,7 @@ set_real_ip_from 146.70.164.210;
 set_real_ip_from 146.70.81.186;
 set_real_ip_from 147.45.116.145;
 set_real_ip_from 147.45.78.34;
+set_real_ip_from 147.78.67.73;
 set_real_ip_from 148.113.152.91;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
@@ -958,7 +959,6 @@ set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.124.193;
 set_real_ip_from 205.185.127.231;
-set_real_ip_from 20.79.154.150;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.36.191;
 set_real_ip_from 209.141.37.94;
@@ -1097,6 +1097,7 @@ set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
+set_real_ip_from 2602:fc24:19:2b4::1;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fccf:310:1::b;
 set_real_ip_from 2602:fccf:310:1::c;
@@ -1453,7 +1454,6 @@ set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:52c0:130:d285::1;
-set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
@@ -1750,6 +1750,7 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
+set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1808,6 +1809,7 @@ set_real_ip_from 45.79.144.222;
 set_real_ip_from 45.80.158.205;
 set_real_ip_from 45.80.158.23;
 set_real_ip_from 45.80.158.27;
+set_real_ip_from 45.82.102.158;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.9.148.113;
@@ -1854,7 +1856,6 @@ set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1948,7 +1949,6 @@ set_real_ip_from 82.68.49.227;
 set_real_ip_from 82.85.247.254;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
-set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.225.54;
