Update lists at 20241003-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -126,7 +126,6 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 136.244.111.163;
 allow 138.59.18.110;
-allow 139.162.249.209;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.239.146.142;
@@ -254,7 +253,6 @@ allow 180.150.226.99;
 allow 185.100.85.132;
 allow 185.100.85.22;
 allow 185.100.85.23;
-allow 185.100.87.136;
 allow 185.100.87.139;
 allow 185.100.87.166;
 allow 185.100.87.174;
@@ -295,6 +293,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1453,6 +1452,7 @@ allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1749,6 +1749,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1947,6 +1948,7 @@ allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.225.54;
