Update lists at 20241003-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -163,7 +163,6 @@ allow 154.26.159.157;
 allow 154.40.44.183;
 allow 155.138.161.171;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.216.18.62;
 allow 162.247.72.192;
 allow 162.247.72.199;
@@ -824,7 +823,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
-allow 2001:9b1:c300:3044::610;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4002:3f7c::b;
 allow 2001:bc8:1600:472a::1;
@@ -1027,6 +1025,7 @@ allow 23.129.64.229;
 allow 23.129.64.230;
 allow 23.137.248.100;
 allow 23.137.250.83;
+allow 23.137.253.109;
 allow 23.137.253.110;
 allow 23.137.253.27;
 allow 23.153.248.33;
@@ -1094,6 +1093,7 @@ allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
@@ -1749,6 +1749,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1900,7 +1901,6 @@ allow 5.79.66.19;
 allow 62.171.137.169;
 allow 62.182.83.214;
 allow 62.182.84.146;
-allow 62.63.244.28;
 allow 64.227.115.78;
 allow 66.146.193.33;
 allow 66.220.242.222;
@@ -2034,7 +2034,6 @@ allow 94.228.169.70;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.32.66.15;
-allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
