--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -107,7 +107,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
-deny 2001:9b1:c300:3044::610;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4002:3f7c::b;
 deny 2001:bc8:1600:472a::1;
@@ -137,6 +136,7 @@ deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
+deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
