--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -163,7 +163,6 @@ set_real_ip_from 154.26.159.157;
 set_real_ip_from 154.40.44.183;
 set_real_ip_from 155.138.161.171;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.216.18.62;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
@@ -824,7 +823,6 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
-set_real_ip_from 2001:9b1:c300:3044::610;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4002:3f7c::b;
 set_real_ip_from 2001:bc8:1600:472a::1;
@@ -1027,6 +1025,7 @@ set_real_ip_from 23.129.64.229;
 set_real_ip_from 23.129.64.230;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.250.83;
+set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.110;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.153.248.33;
@@ -1094,6 +1093,7 @@ set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
+set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fccf:310:1::b;
@@ -1749,6 +1749,7 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
+set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1900,7 +1901,6 @@ set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.83.214;
 set_real_ip_from 62.182.84.146;
-set_real_ip_from 62.63.244.28;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
@@ -2034,7 +2034,6 @@ set_real_ip_from 94.228.169.70;
 set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
 set_real_ip_from 94.32.66.15;
-set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
