--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -148,6 +148,7 @@ set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
+set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
@@ -442,7 +443,6 @@ set_real_ip_from 2a03:4000:21:115:8837:15ff:fe14:64cc;
 set_real_ip_from 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 set_real_ip_from 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
-set_real_ip_from 2a03:4000:28:1e8::69;
 set_real_ip_from 2a03:4000:28:3e:c4ee:b0ff:fecb:1cde;
 set_real_ip_from 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 set_real_ip_from 2a03:4000:2b:66e:dead:beef:ca1f:1337;
