--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -106,6 +106,8 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:6;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
+set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:9b1:c300:3044::610;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4002:3f7c::b;
 set_real_ip_from 2001:bc8:1600:472a::1;
@@ -137,6 +139,7 @@ set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
+set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fccf:310:1::b;
 set_real_ip_from 2602:fccf:310:1::c;
