--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -250,10 +250,13 @@ allow 180.150.226.99;
 allow 185.100.85.132;
 allow 185.100.85.22;
 allow 185.100.85.23;
+allow 185.100.85.24;
+allow 185.100.85.25;
 allow 185.100.87.136;
 allow 185.100.87.139;
 allow 185.100.87.166;
 allow 185.100.87.174;
+allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.253;
 allow 185.100.87.41;
@@ -1453,6 +1456,7 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
+allow 2a05:541:122:49::1;
 allow 2a05:541:141:2c::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
@@ -1460,6 +1464,9 @@ allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
+allow 2a06:1700:0:12::2;
+allow 2a06:1700:0:12::3;
+allow 2a06:1700:0:12::4;
 allow 2a06:1700:0:15::1;
 allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
@@ -1745,6 +1752,8 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
+allow 45.129.84.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
