--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -144,6 +144,7 @@ allow 146.70.164.210;
 allow 146.70.81.186;
 allow 147.45.116.145;
 allow 147.45.78.34;
+allow 147.78.67.73;
 allow 148.113.152.91;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -292,6 +293,7 @@ allow 185.146.232.234;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -518,6 +520,7 @@ allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
 allow 185.241.208.232;
+allow 185.241.208.236;
 allow 185.241.208.243;
 allow 185.241.208.54;
 allow 185.241.208.71;
@@ -951,7 +954,6 @@ allow 205.185.124.193;
 allow 205.185.127.231;
 allow 209.141.32.181;
 allow 209.141.32.198;
-allow 209.141.36.191;
 allow 209.141.36.247;
 allow 209.141.37.94;
 allow 209.141.46.203;
@@ -1059,6 +1061,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
+allow 23.155.8.104;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
@@ -1085,6 +1088,7 @@ allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0a::f03c:95ff:fe8d:6977;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -1746,6 +1750,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1808,6 +1813,7 @@ allow 45.82.102.158;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.9.148.113;
+allow 45.94.31.180;
 allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.223;
