--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -131,6 +131,7 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0a::f03c:95ff:fe8d:6977;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
