--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -131,6 +131,7 @@ allow 141.98.11.62;
 allow 141.98.119.106;
 allow 142.171.12.88;
 allow 142.44.133.81;
+allow 142.44.156.158;
 allow 142.44.234.69;
 allow 143.110.156.176;
 allow 144.172.118.4;
@@ -823,6 +824,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:9b1:c300:3044::610;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4002:3f7c::b;
 allow 2001:bc8:1600:472a::1;
@@ -964,6 +966,7 @@ allow 209.141.54.203;
 allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.60.219;
+allow 209.141.61.16;
 allow 209.141.62.71;
 allow 212.21.66.6;
 allow 212.38.189.186;
@@ -1684,7 +1687,6 @@ allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:4005:1002:ffff:185:40:4:95;
-allow 2a0e:97c0:3e3:50b::1;
 allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:b107:dd0::3:ed78:7632;
@@ -1746,13 +1748,11 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
 allow 43.157.40.39;
-allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.248;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1859,7 +1859,6 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1900,12 +1899,12 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 5.61.51.143;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.83.214;
 allow 62.182.84.146;
+allow 62.63.244.28;
 allow 64.227.115.78;
 allow 66.146.193.33;
 allow 66.220.242.222;
@@ -1944,7 +1943,6 @@ allow 80.94.92.106;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.118.242.62;
-allow 82.153.138.119;
 allow 8.218.9.41;
 allow 82.221.128.191;
 allow 82.221.131.5;
@@ -1996,6 +1994,7 @@ allow 91.206.26.26;
 allow 91.208.75.153;
 allow 91.208.75.156;
 allow 91.208.75.178;
+allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
