--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -107,6 +107,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:9b1:c300:3044::610;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4002:3f7c::b;
 allow 2001:bc8:1600:472a::1;
@@ -725,7 +726,6 @@ allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:4005:1002:ffff:185:40:4:95;
-allow 2a0e:97c0:3e3:50b::1;
 allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:b107:dd0::3:ed78:7632;
