--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -131,6 +131,7 @@ set_real_ip_from 141.98.11.62;
 set_real_ip_from 141.98.119.106;
 set_real_ip_from 142.171.12.88;
 set_real_ip_from 142.44.133.81;
+set_real_ip_from 142.44.156.158;
 set_real_ip_from 142.44.234.69;
 set_real_ip_from 143.110.156.176;
 set_real_ip_from 144.172.118.4;
@@ -823,6 +824,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:9b1:c300:3044::610;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4002:3f7c::b;
 set_real_ip_from 2001:bc8:1600:472a::1;
@@ -964,6 +966,7 @@ set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.59.116;
 set_real_ip_from 209.141.60.219;
+set_real_ip_from 209.141.61.16;
 set_real_ip_from 209.141.62.71;
 set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.38.189.186;
@@ -1684,7 +1687,6 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:38;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:94;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:95;
-set_real_ip_from 2a0e:97c0:3e3:50b::1;
 set_real_ip_from 2a0e:97c0:3ea:372::1;
 set_real_ip_from 2a0e:97c0:3ea:bc::1;
 set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
@@ -1746,13 +1748,11 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 43.157.40.39;
-set_real_ip_from 45.11.229.132;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.248;
 set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
@@ -1859,7 +1859,6 @@ set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1900,12 +1899,12 @@ set_real_ip_from 54.36.209.254;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
-set_real_ip_from 5.61.51.143;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.83.214;
 set_real_ip_from 62.182.84.146;
+set_real_ip_from 62.63.244.28;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
@@ -1944,7 +1943,6 @@ set_real_ip_from 80.94.92.106;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.118.242.62;
-set_real_ip_from 82.153.138.119;
 set_real_ip_from 8.218.9.41;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
@@ -1996,6 +1994,7 @@ set_real_ip_from 91.206.26.26;
 set_real_ip_from 91.208.75.153;
 set_real_ip_from 91.208.75.156;
 set_real_ip_from 91.208.75.178;
+set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.210.59.57;
