Update lists at 20241005-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -115,6 +115,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.35.245.150;
+allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
@@ -143,7 +144,6 @@ allow 146.70.164.210;
 allow 146.70.81.186;
 allow 147.45.116.145;
 allow 147.45.78.34;
-allow 147.78.67.73;
 allow 148.113.152.91;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -823,9 +823,9 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
-allow 2001:9b1:c300:3044::610;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4002:3f7c::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1814,7 +1814,6 @@ allow 45.82.102.158;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.9.148.113;
-allow 45.94.31.180;
 allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.223;
@@ -1903,7 +1902,6 @@ allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.83.214;
 allow 62.182.84.146;
-allow 62.63.244.28;
 allow 64.227.115.78;
 allow 66.146.193.33;
 allow 66.220.242.222;
@@ -1942,6 +1940,7 @@ allow 80.94.92.106;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.118.242.62;
+allow 82.153.138.119;
 allow 8.218.9.41;
 allow 82.221.128.191;
 allow 82.221.131.5;
@@ -1952,7 +1951,6 @@ allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
-allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
 allow 84.252.120.163;
