Update lists at 20241006-1801

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.163.218.11;
 allow 103.164.54.199;
 allow 103.196.37.111;
 allow 103.208.86.5;
+allow 103.229.54.107;
 allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.28.52.93;
@@ -26,6 +27,7 @@ allow 104.244.73.43;
 allow 104.244.74.23;
 allow 104.244.74.97;
 allow 104.244.75.74;
+allow 104.244.75.89;
 allow 104.244.77.192;
 allow 104.244.77.208;
 allow 104.244.78.162;
@@ -39,6 +41,7 @@ allow 107.174.138.172;
 allow 107.189.10.175;
 allow 107.189.11.111;
 allow 107.189.11.113;
+allow 107.189.11.53;
 allow 107.189.1.160;
 allow 107.189.1.167;
 allow 107.189.1.175;
@@ -57,6 +60,7 @@ allow 107.189.14.43;
 allow 107.189.1.80;
 allow 107.189.1.9;
 allow 107.189.2.108;
+allow 107.189.2.179;
 allow 107.189.2.206;
 allow 107.189.29.103;
 allow 107.189.29.184;
@@ -66,6 +70,7 @@ allow 107.189.30.69;
 allow 107.189.30.86;
 allow 107.189.3.11;
 allow 107.189.31.232;
+allow 107.189.31.248;
 allow 107.189.31.33;
 allow 107.189.3.249;
 allow 107.189.4.12;
@@ -144,6 +149,7 @@ allow 146.70.164.210;
 allow 146.70.81.186;
 allow 147.45.116.145;
 allow 147.45.78.34;
+allow 147.78.67.73;
 allow 148.113.152.91;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -194,6 +200,7 @@ allow 172.104.176.218;
 allow 172.104.182.84;
 allow 172.104.243.155;
 allow 172.105.161.162;
+allow 172.232.158.190;
 allow 172.232.173.127;
 allow 172.234.228.174;
 allow 172.81.131.110;
@@ -213,7 +220,7 @@ allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.97.114.182;
 allow 176.97.114.202;
-allow 177.149.135.222;
+allow 177.149.153.149;
 allow 178.162.209.56;
 allow 178.17.170.144;
 allow 178.17.170.215;
@@ -230,8 +237,6 @@ allow 178.20.55.182;
 allow 178.215.224.65;
 allow 178.218.144.18;
 allow 178.218.144.51;
-allow 178.218.144.64;
-allow 178.218.144.96;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -293,6 +298,7 @@ allow 185.146.232.234;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1077,6 +1083,7 @@ allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2406:8dc0:6005::97f2:9c02;
 allow 2407:3640:2207:8882::1;
+allow 2407:cdc0:c004::d44:d46f;
 allow 24.240.72.170;
 allow 2.56.10.36;
 allow 2.58.56.220;
@@ -1089,6 +1096,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
+allow 2600:3c09::f03c:95ff:fe8b:210a;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0a::f03c:95ff:fe8d:6977;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
@@ -1155,6 +1163,10 @@ allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
+allow 2605:6400:30:f10c:326a:ca74:1896:b82a;
+allow 2605:6400:30:f10c:4de5:f13b:1d56:2ab6;
+allow 2605:6400:30:f10c:6327:774b:289a:2916;
+allow 2605:6400:30:f10c:d9d4:9572:75be:cbfd;
 allow 2605:6400:30:f174::;
 allow 2605:6400:30:f174:1:1:1:1;
 allow 2605:6400:30:f174:1111:2222:3333:4444;
@@ -1364,7 +1376,6 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:11c0:1b:aa2::5;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
-allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1690,8 +1701,6 @@ allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:4005:1002:ffff:185:40:4:95;
 allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:3ea:bc::1;
-allow 2a0e:b107:dd0::3:ed78:7632;
-allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:93c1:26:1f2::9ce5;
@@ -1815,7 +1824,11 @@ allow 45.80.158.27;
 allow 45.82.102.158;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.84.107.182;
+allow 45.84.107.198;
+allow 45.84.107.76;
 allow 45.9.148.113;
+allow 45.94.31.180;
 allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.223;
@@ -1835,7 +1848,6 @@ allow 46.29.238.177;
 allow 46.38.255.27;
 allow 47.243.99.161;
 allow 47.76.187.86;
-allow 49.51.172.44;
 allow 5.104.86.6;
 allow 51.15.59.15;
 allow 51.195.166.174;
@@ -1899,6 +1911,7 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 54.81.94.194;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
@@ -1963,10 +1976,10 @@ allow 85.93.218.204;
 allow 86.205.5.107;
 allow 87.118.110.27;
 allow 87.118.116.103;
+allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
-allow 87.120.254.132;
 allow 88.80.20.86;
 allow 89.147.108.90;
 allow 89.147.110.118;
@@ -2022,7 +2035,6 @@ allow 94.131.3.2;
 allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.143.231.53;
-allow 94.158.246.66;
 allow 94.16.112.22;
 allow 94.16.116.81;
 allow 94.16.116.86;
