--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -7,6 +7,7 @@ set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.164.54.199;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
+set_real_ip_from 103.229.54.107;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
 set_real_ip_from 103.28.52.93;
@@ -26,6 +27,7 @@ set_real_ip_from 104.244.73.43;
 set_real_ip_from 104.244.74.23;
 set_real_ip_from 104.244.74.97;
 set_real_ip_from 104.244.75.74;
+set_real_ip_from 104.244.75.89;
 set_real_ip_from 104.244.77.192;
 set_real_ip_from 104.244.77.208;
 set_real_ip_from 104.244.78.162;
@@ -39,6 +41,7 @@ set_real_ip_from 107.174.138.172;
 set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.11.111;
 set_real_ip_from 107.189.11.113;
+set_real_ip_from 107.189.11.53;
 set_real_ip_from 107.189.1.160;
 set_real_ip_from 107.189.1.167;
 set_real_ip_from 107.189.1.175;
@@ -57,6 +60,7 @@ set_real_ip_from 107.189.14.43;
 set_real_ip_from 107.189.1.80;
 set_real_ip_from 107.189.1.9;
 set_real_ip_from 107.189.2.108;
+set_real_ip_from 107.189.2.179;
 set_real_ip_from 107.189.2.206;
 set_real_ip_from 107.189.29.103;
 set_real_ip_from 107.189.29.184;
@@ -66,6 +70,7 @@ set_real_ip_from 107.189.30.69;
 set_real_ip_from 107.189.30.86;
 set_real_ip_from 107.189.3.11;
 set_real_ip_from 107.189.31.232;
+set_real_ip_from 107.189.31.248;
 set_real_ip_from 107.189.31.33;
 set_real_ip_from 107.189.3.249;
 set_real_ip_from 107.189.4.12;
@@ -144,6 +149,7 @@ set_real_ip_from 146.70.164.210;
 set_real_ip_from 146.70.81.186;
 set_real_ip_from 147.45.116.145;
 set_real_ip_from 147.45.78.34;
+set_real_ip_from 147.78.67.73;
 set_real_ip_from 148.113.152.91;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
@@ -194,6 +200,7 @@ set_real_ip_from 172.104.176.218;
 set_real_ip_from 172.104.182.84;
 set_real_ip_from 172.104.243.155;
 set_real_ip_from 172.105.161.162;
+set_real_ip_from 172.232.158.190;
 set_real_ip_from 172.232.173.127;
 set_real_ip_from 172.234.228.174;
 set_real_ip_from 172.81.131.110;
@@ -213,7 +220,7 @@ set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.97.114.182;
 set_real_ip_from 176.97.114.202;
-set_real_ip_from 177.149.135.222;
+set_real_ip_from 177.149.153.149;
 set_real_ip_from 178.162.209.56;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.215;
@@ -230,8 +237,6 @@ set_real_ip_from 178.20.55.182;
 set_real_ip_from 178.215.224.65;
 set_real_ip_from 178.218.144.18;
 set_real_ip_from 178.218.144.51;
-set_real_ip_from 178.218.144.64;
-set_real_ip_from 178.218.144.96;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -293,6 +298,7 @@ set_real_ip_from 185.146.232.234;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -1077,6 +1083,7 @@ set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2406:8dc0:6005::97f2:9c02;
 set_real_ip_from 2407:3640:2207:8882::1;
+set_real_ip_from 2407:cdc0:c004::d44:d46f;
 set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.56.10.36;
 set_real_ip_from 2.58.56.220;
@@ -1089,6 +1096,7 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
+set_real_ip_from 2600:3c09::f03c:95ff:fe8b:210a;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe8d:6977;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
@@ -1155,6 +1163,10 @@ set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
+set_real_ip_from 2605:6400:30:f10c:326a:ca74:1896:b82a;
+set_real_ip_from 2605:6400:30:f10c:4de5:f13b:1d56:2ab6;
+set_real_ip_from 2605:6400:30:f10c:6327:774b:289a:2916;
+set_real_ip_from 2605:6400:30:f10c:d9d4:9572:75be:cbfd;
 set_real_ip_from 2605:6400:30:f174::;
 set_real_ip_from 2605:6400:30:f174:1:1:1:1;
 set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
@@ -1364,7 +1376,6 @@ set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:11c0:1b:aa2::5;
 set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
-set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
@@ -1690,8 +1701,6 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:94;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:95;
 set_real_ip_from 2a0e:97c0:3ea:372::1;
 set_real_ip_from 2a0e:97c0:3ea:bc::1;
-set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
-set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:1b::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
@@ -1815,7 +1824,11 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.82.102.158;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
+set_real_ip_from 45.84.107.182;
+set_real_ip_from 45.84.107.198;
+set_real_ip_from 45.84.107.76;
 set_real_ip_from 45.9.148.113;
+set_real_ip_from 45.94.31.180;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.130;
 set_real_ip_from 45.95.169.223;
@@ -1835,7 +1848,6 @@ set_real_ip_from 46.29.238.177;
 set_real_ip_from 46.38.255.27;
 set_real_ip_from 47.243.99.161;
 set_real_ip_from 47.76.187.86;
-set_real_ip_from 49.51.172.44;
 set_real_ip_from 5.104.86.6;
 set_real_ip_from 51.15.59.15;
 set_real_ip_from 51.195.166.174;
@@ -1899,6 +1911,7 @@ set_real_ip_from 54.36.209.254;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
+set_real_ip_from 54.81.94.194;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
@@ -1963,10 +1976,10 @@ set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.205.5.107;
 set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.116.103;
+set_real_ip_from 87.118.116.12;
 set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
-set_real_ip_from 87.120.254.132;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
@@ -2022,7 +2035,6 @@ set_real_ip_from 94.131.3.2;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.143.231.53;
-set_real_ip_from 94.158.246.66;
 set_real_ip_from 94.16.112.22;
 set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.116.86;
