--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -123,11 +123,13 @@ deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
 deny 2406:8dc0:6005::97f2:9c02;
 deny 2407:3640:2207:8882::1;
+deny 2407:cdc0:c004::d44:d46f;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:95ff:fe5d:562;
+deny 2600:3c09::f03c:95ff:fe8b:210a;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0a::f03c:95ff:fe8d:6977;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
@@ -194,6 +196,10 @@ deny 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 deny 2605:6400:30:efba:dead::;
 deny 2605:6400:30:f08c:45b7:4a99:a154:694e;
 deny 2605:6400:30:f0ed:9151:66ed:6366:5c74;
+deny 2605:6400:30:f10c:326a:ca74:1896:b82a;
+deny 2605:6400:30:f10c:4de5:f13b:1d56:2ab6;
+deny 2605:6400:30:f10c:6327:774b:289a:2916;
+deny 2605:6400:30:f10c:d9d4:9572:75be:cbfd;
 deny 2605:6400:30:f174::;
 deny 2605:6400:30:f174:1:1:1:1;
 deny 2605:6400:30:f174:1111:2222:3333:4444;
@@ -402,7 +408,6 @@ deny 2800:ba0:6:c1::4858;
 deny 2a00:11c0:1b:aa2::5;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
-deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -728,8 +733,6 @@ deny 2a0e:4005:1002:ffff:185:40:4:94;
 deny 2a0e:4005:1002:ffff:185:40:4:95;
 deny 2a0e:97c0:3ea:372::1;
 deny 2a0e:97c0:3ea:bc::1;
-deny 2a0e:b107:dd0::3:ed78:7632;
-deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:1b::1;
 deny 2a0f:93c1:26:1f2::9ce5;
