--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -768,3 +768,4 @@ allow 2a12:a800:2:1:45:138:16:178;
 allow 2a12:a800:2:1:45:141:215:116;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
+allow 2a13:d207:0:461::1;
