Update lists at 20241007-1200

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -24,7 +24,6 @@ deny 2001:41d0:a:2a61::1;
 deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
-deny 2001:4b20:12:f001::105;
 deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 deny 2001:4ba0:fff8:120::1;
@@ -107,6 +106,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
+deny 2001:9b1:c300:3044::610;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4002:3f7c::b;
 deny 2001:b030:2422::7234;
@@ -716,6 +716,7 @@ deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:2500:571:3b8:1cb:287c:3f60:805d;
 deny 2a0c:2500:571:3b8:e28b:b891:d56b:963a;
+deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
