--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -297,7 +297,6 @@ allow 185.146.232.234;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -524,7 +523,6 @@ allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
 allow 185.241.208.232;
-allow 185.241.208.236;
 allow 185.241.208.243;
 allow 185.241.208.54;
 allow 185.241.208.71;
@@ -745,7 +743,6 @@ allow 2001:41d0:a:2a61::1;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
-allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:4ba0:fff8:120::1;
@@ -828,6 +825,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:9b1:c300:3044::610;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4002:3f7c::b;
 allow 2001:b030:2422::7234;
@@ -963,7 +961,6 @@ allow 205.185.127.231;
 allow 206.188.197.24;
 allow 209.141.32.181;
 allow 209.141.32.198;
-allow 209.141.36.247;
 allow 209.141.37.94;
 allow 209.141.46.203;
 allow 209.141.51.180;
@@ -1683,6 +1680,7 @@ allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:3b8:1cb:287c:3f60:805d;
 allow 2a0c:2500:571:3b8:e28b:b891:d56b:963a;
+allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1839,7 +1837,6 @@ allow 45.95.202.48;
 allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.232.251.191;
-allow 46.234.47.105;
 allow 46.29.238.177;
 allow 46.38.255.27;
 allow 47.243.99.161;
@@ -1912,6 +1909,7 @@ allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.83.214;
 allow 62.182.84.146;
+allow 62.63.244.28;
 allow 64.227.115.78;
 allow 66.146.193.33;
 allow 66.220.242.222;
@@ -1950,6 +1948,7 @@ allow 80.94.92.106;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.118.242.62;
+allow 82.153.138.119;
 allow 8.218.9.41;
 allow 82.221.128.191;
 allow 82.221.131.5;
@@ -1959,12 +1958,12 @@ allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
-allow 84.19.182.20;
 allow 84.239.46.144;
 allow 84.247.165.51;
 allow 84.252.120.163;
 allow 84.252.121.147;
 allow 85.17.9.83;
+allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.205.5.107;
 allow 87.118.110.27;
